# Automaed-mobile-robot

./: .gitignore  README.md  indoor_clip.pcd  segmented_output.pcd  waypoints.txt
maps/: office_segmented_no_ceiling.ply  office_segmented_output.ply  walls.pcd
media/videos/: indoor waypoints.webm  test indoor waypoints.webm  test waypoints.webm
src/LIO-SAM-ros2/config/: params.yaml
src/LIO-SAM-ros2/include/lio_sam/: utility.hpp
src/LIO-SAM-ros2/launch/: run.launch.py
src/LIO-SAM-ros2/src/: imageProjection.cpp
src/file_transfer_pkg/: CMakeLists.txt  package.xml
src/file_transfer_pkg/src/: file_receiver.cpp  file_sender.cpp
src/lidar_map_processor/: CMakeLists.txt  package.xml
src/lidar_map_processor/src/: lidar_map_processor.cpp  lidar_map_processor_DL.cpp  lidar_map_processor_voxel.cpp
src/vehicle_simulator/launch/: system_garage.launch  system_test.launch  system_test_room.launch
src/vehicle_simulator/log/: metrics_2024-11-30-17-35-11.txt  metrics_2024-11-30-17-37-59.txt  metrics_2024-11-30-18-1-35.txt  metrics_2024-11-30-18-10-32.txt  metrics_2024-11-30-18-5-33.txt  metrics_2024-11-30-20-16-10.txt  metrics_2024-11-30-20-27-2.txt  metrics_2024-11-30-20-46-40.txt  trajectory_2024-11-30-18-10-32.txt  trajectory_2024-11-30-20-16-10.txt  trajectory_2024-11-30-20-27-2.txt  trajectory_2024-11-30-20-46-40.txt
src/vehicle_simulator/mesh/test/preview/: pointcloud.ply
src/vehicle_simulator/mesh/test_room/: model.sdf
src/vehicle_simulator/mesh/test_room/objects/: model.sdf
src/vehicle_simulator/urdf/: camera.urdf.xacro  robot.sdf
src/vehicle_simulator/world/: test.world  test_room.world
src/waypoint_publisher/: CMakeLists.txt  package.xml
src/waypoint_publisher/src/: waypoint_publisher.cpp
superpoint_transformer/notebooks/: semantic_map.ipynb  superpoint_transformer_ply.ipynb  waypoints.csv  waypoints.txt  waypoints_from_polygons.csv  waypoints_img.csv
superpoint_transformer/src/utils/__pycache__/: tensor.numba_randperm-236.py38.1.nbc  tensor.numba_randperm-236.py38.nbi
